@@ -9,11 +9,9 @@ module DevKitInstaller
     'tdm-32-4.6.1',
     'tdm-32-4.5.2',
     'tdm-64-4.6.1',
-    'llvm-32-2.8',
     'mingw-32-4.6.2',
     'mingw-32-4.5.2',
     'mingw-32-3.4.5',
-    'mingw64-32-4.5.4',
     'mingw64-32-4.6.3',
 #    'mingw64-64-4.4.5',
   ]
